# vcmi-mlserver

./: .gitignore  CMakeLists.txt  Config.h  README.md  ServerPlugin.cpp  ServerPlugin.h  Stats.cpp  Stats.h
_notes/: duplicate_heroes.txt  game_bugs.txt  notes.txt  serialization-MakeAction.txt  serialization-MoveHero.txt  setup-ubuntu-conan.txt
_notes/diagrams/: ai-init-dev.puml  ai-init.puml  animation-flow.puml  arch-alphastar-entity.puml  arch-vcmi-alphastar.puml  arch-vcmi-attention.puml  arch-vcmi-conv.puml  arch-vcmi-fullyconv.puml  arch-vcmi-resnet.puml  boot-detail.puml  boot-server-connections.puml  boot.puml  classes-CPack.puml  classes-appliers.puml  classes-visitors.puml  classes-wbs.puml  communication-flow.puml  communication-sequence-MakeAction.puml  communication-sequence-battle-replay.puml  communication-sequence-loadgame.puml  communication-sequence-startgame.puml  communication-simplified.puml  connector-sequence.puml  connector.puml  dual-model-training-2-init-AA.puml  dual-model-training-2-init-AB.puml  dual-model-training-2-init-AEND.puml  dual-model-training-2-init.puml  ml-init.puml  obs-update-flow-v1.puml  obs-update-flow.puml  pov-connector.puml  pov-gym.puml  pov-vcmi.puml  routing-ClientConnected-client-server.puml  routing-MakeAction-client-server.puml  routing-MoveHero-client-server.puml  routing-PlayerBlocked-server-client.puml  threads-client.puml  vcmi-1.32-connector-reset-endbattle.puml  (+23 more)
sql/: seed.sql  stats.db  structure.sql
